--- a/robot_localization/params/ekf_template.yaml
+++ b/robot_localization/params/ekf_template.yaml
@@ -62,10 +62,10 @@ publish_acceleration: false
 #     3b. MAKE SURE something else is generating the odom->base_link transform. Note that this can even be another state
 #         estimation node from robot_localization! However, that instance should *not* fuse the global data.
 map_frame: map              # Defaults to "map" if unspecified
-odom_frame: odom2            # Defaults to "odom" if unspecified
+odom_frame: odom            # Defaults to "odom" if unspecified
 #base_link_frame: base_link  # Defaults to "base_link" if unspecified
-base_link_frame: imu_link  # Defaults to "base_link" if unspecified
-world_frame: odom2           # Defaults to the value of odom_frame if unspecified
+base_link_frame: imu_link #base_footprint  # Defaults to "base_link" if unspecified
+world_frame: odom           # Defaults to the value of odom_frame if unspecified
 
 # The filter accepts an arbitrary number of inputs from each input message type (nav_msgs/Odometry,
 # geometry_msgs/PoseWithCovarianceStamped, geometry_msgs/TwistWithCovarianceStamped,
@@ -159,6 +159,7 @@ twist0_rejection_threshold: 2
 twist0_nodelay: false
 
 #imu0: example/imu
+#imu0: base_footprint
 imu0: imu
 #imu0: /device_0/sensor_2/Accel_0/imu/data
 imu0_config: [false, false, false,
