carto 2.0.0 debug cont

--- a/pcl-examples/CMakeLists.txt
+++ b/pcl-examples/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 project(don_segmentation)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(PCL 1.8 REQUIRED)
 
@@ -11,3 +14,5 @@ add_definitions(${PCL_DEFINITIONS})
 add_executable (don_segmentation don_segmentation.cpp)
 target_link_libraries (don_segmentation ${PCL_LIBRARIES})
 
+add_executable (pcl_visualizer_demo pcl_visualizer_demo.cpp)
+target_link_libraries (pcl_visualizer_demo ${PCL_LIBRARIES})
